# my_practice

./: .gitignore  GAME.md  README.md  UX.md  linux_process.md
Backend/: nginx_dev.md
CUDA/: 1.c
Frontend/: CSS.md  browserUserAgent.js  vuejs2.md
OS/linux_kernel/: CMakeLists.txt  fork.c  get_inode.c  hello.c  mmap.c  pipe.c  readv.c  select.c  smallhog.c  tcp_demo.c  tcp_seq_show.c  thread.c  wait.c  writev.c
Test/: fibonacci.go  nodejs_pageload_speed_in_function.js  php_pageload_speed_in_function.php  python_pageload_speed_in_function.py  test-driver.py
acm/: acm_website.md
algothrim/: 8_queen.c  BinarySearch.java  Dijkstra.cpp  Euclid.c  Exhaustive-Attack-method.c  Fibiter.c  Fibonacii.c  Fizz-Buzz.c  NOTE.md  README.md  Tokenizer.cpp  a-simple-encrypt.c  bucket-sort.c  count-sort.c  merge_sort.c  remember-sort.c  sequentialSearch.c
angular/: 2.html  bootstrap.html  controllers.html  controllers2.html  directives.html  expressions.html  forms.html  html-dom2.html  include.html  ng-repeat.html  tables.html  validation.html
asmbler/: main.c
blog/: 2014-12-14.md  2014-12-15.md  2014-12-16.md  2014-12-17.md  2014-12-18.md  2014-12-20.md  2014-12-23.md  2014-12-27.md  2015-1-19.md  2015-1-21.md  2015-1-4.md  README.md
boost/: Boost.Random.cpp  Boost.Thread.cpp  a_simple_boost.cpp  boost_regex.cpp  linear_ublas.cpp
bootstrap3/: container-fluid.html  container.row.col-md-.html
c_cxx/: 1.c  AST.cpp  CMakeLists.txt  Clib.cpp  Intvector.cpp  Return.cpp  Vector.h  YourPets2.cpp  abs.c  access_specifiers.cpp  arrays.cpp  atof.c  char-pointer.c  clearerr.c  (+27 more)
(+2988 files in other folders)
